完成sobel和roberts算子

--- a/Sharp_EdgeDetect/Sharp_EdgeDetect.vcxproj
+++ b/Sharp_EdgeDetect/Sharp_EdgeDetect.vcxproj
@@ -139,6 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="EdgeDetect.cpp" />
+    <ClCompile Include="Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="EdgeDetect.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
